# kernelbot

./: .coverage  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  LICENSE  README.md  coverage.xml  data.json  data.sql  demo.md  discord-bot.py  instructions.txt  leaderboard.py  pyproject.toml  reference.py  requirements.txt  runner_instructions.txt  seed.sql  submission.py  test_workflow.py  train.py
.buildkite/: pipeline.yml
SKILLS/: buildkite.md  test_bot.md
docker/: INSTALL_NVTRITON_TILEIR.md  amd-docker.Dockerfile  helion.Dockerfile  install_nvtriton.sh  uninstall_nvtriton.sh
docs/: BUILDKITE_POC.md  database.md  (+7 more)
src/kernelboard/: app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
src/kernelboard/app/: color.py  error.py  leaderboard.py  score.py
src/kernelboard/app/static/css/: input.css
src/kernelboard/app/static/js/: leaderboard.js
src/kernelboard/app/templates/: coming_soon.html  index.html
src/kernelboard/app/templates/error/: 500.html
src/kernelboard/kernelboard/: __init__.py  db.py  index.py  time.py
src/kernelboard/kernelboard/static/css/: input.css  main.css
src/kernelboard/kernelboard/templates/: index.html
src/kernelboard/kernelboard/templates/error/: 404.html
src/kernelboard/static/css/: input.css  main.css
src/kernelboard/static/js/: code_toggle.js  leaderboard.js
src/kernelboard/templates/: 404.html  500.html  base.html  index.html  leaderboard.html  lectures.html
src/kernelboard/tests/: app_test.py  conftest.py  test_color.py  test_db.py  test_score.py  test_time.py
(+266 files in other folders)
